Fix header to account for scrollbar.

--- a/src/components/data/ContentContainer.scss
+++ b/src/components/data/ContentContainer.scss
@@ -2,7 +2,7 @@
 
 .content-container {
   .mdc-top-app-bar {
-    width: calc(100vw - 480px);
+    width: calc(100% - 480px);
     &__row {
       height: 72px;
     }
